--- a/pitch_ai/src/main/resources/templates/login.html
+++ b/pitch_ai/src/main/resources/templates/login.html
@@ -33,27 +33,26 @@
             width: 12vw; /* Responsive image size */
         }
 
-        .image1 { top: 10%; left: 5%; }
-        .image2 { top: 15%; right: 10%; }
+        .image1 { top: 10%; left: 10%; }
+        .image2 { top: 20%; right: 15%; }
         .image3 { bottom: 0%; right: 0%; }
         .image4 { bottom: 0%; left: 0%; }
-        .image5 { top: 10%; left: 50%; transform: translateX(-50%) scale(2); }
-        .image6 { bottom: 30%; left: 45%; transform: scale(1.2); }
-
+        .image5 { top: 15%; left: 45%; transform: scale(3); }
+        .image6 { bottom: 36%; left: 44%; height: 45%; min-width: 20%;}
+        
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
             position: absolute;
-            bottom: 5%;
+            bottom: 0%;
             left: 50%;
             transform: translateX(-50%);
-            background: rgba(255, 255, 255, 0.8);
-            padding: 20px;
+            background-color: #F4EBA7;
+            padding: 20px 40px;
             border-radius: 10px;
             text-align: center;
-            width: 80%;
-            max-width: 350px;
+            width: 25%;
         }
 
         form input {
@@ -71,35 +70,30 @@
             width: 100%;
         }
 
+        .button-container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('images/button.png') no-repeat center center;
+            background-size: 100% 100%;
+            z-index: -1;
+        }
+
         form button {
             width: 100%;
             padding: 10px;
-            background-color: #333;
+            background-color: transparent;
             border: none;
-            color: #fff;
+            color: #fefeff;
             border-radius: 5px;
-            font-size: 18px;
+            font-size: 20px;
             cursor: pointer;
-            transition: 0.3s;
+            transition: background-color 0.3s, color 0.3s;
         }
-
-        form button:hover {
-            background-color: #555;
-        }
-
-        @media (max-width: 768px) {
-            .overlay-images img { width: 25vw; }
-            .image5 { transform: translateX(-40%) scale(2); }
-            .image6 { transform: scale(1); }
-            form { width: 90%; }
-        }
-
-        @media (max-width: 480px) {
-            .overlay-images img { width: 20vw; }
-            .image5 { transform: translateX(-50%) scale(1.2); }
-            .image6 { bottom: 20%; }
-            form { width: 80%; padding: 15px; }
-        }
+        
     </style>
 </head>
 <body>
@@ -112,7 +106,7 @@
         <img src="images/cat.png" class="image6">
     </div>
     
-    <form>
+    <form class="in">
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
         <div class="button-container">
