--- a/pitch_ai/src/main/resources/templates/login.html
+++ b/pitch_ai/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 
         .overlay-images img {
             position: absolute;
-            width: 12vw; /* Responsive image size */
+            width: 12vw;
         }
 
         .image1 { top: 10%; left: 10%; }
@@ -38,14 +38,14 @@
         .image3 { bottom: 0%; right: 0%; }
         .image4 { bottom: 0%; left: 0%; }
         .image5 { top: 15%; left: 45%; transform: scale(3); }
-        .image6 { bottom: 36%; left: 44%; height: 45%; min-width: 20%;}
+        .image6 { bottom: 25%; left: 40%; height: 50%; min-width: 20%;}
         
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
             position: absolute;
-            bottom: 0%;
+            bottom: 5%;
             left: 50%;
             transform: translateX(-50%);
             background-color: #F4EBA7;
@@ -53,21 +53,24 @@
             border-radius: 10px;
             text-align: center;
             width: 25%;
+            height: 20%;
         }
 
         form input {
             width: 100%;
-            padding: 10px;
+            padding: 15px;
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
+            font-size: 18px;
         }
 
         .button-container {
             margin: 10px 0;
             position: relative;
             width: 100%;
+            height: 30%;
         }
 
         .button-container::before {
@@ -84,6 +87,7 @@
 
         form button {
             width: 100%;
+            height: 90%;
             padding: 10px;
             background-color: transparent;
             border: none;
